--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,17 @@
 asgiref==3.4.1
+autopep8==1.6.0
 backports.zoneinfo==0.2.1
+coverage==6.2
+dj-database-url==0.5.0
 Django==4.0.1
+djangorestframework==3.13.1
+djangorestframework-jwt==1.11.0
+gunicorn==20.1.0
+nose==1.3.7
+psycopg2-binary==2.9.3
+pycodestyle==2.8.0
+PyJWT==1.7.1
+pytz==2021.3
 sqlparse==0.4.2
+toml==0.10.2
+whitenoise==5.3.0
